--- a/monthly-stats.html
+++ b/monthly-stats.html
@@ -6,6 +6,7 @@
     <title>Monthly Statistics - EPD Dashboard</title>
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/monthly-stats.css">
+    <link rel="stylesheet" href="css/period-table.css"> <!-- Add this line -->
 </head>
 <body>
     <div id="app">
